--- a/config/database.yml
+++ b/config/database.yml
@@ -19,6 +19,7 @@ default: &default
 
 development:
   <<: *default
+  host: localhost
   database: empmng_development
 
 # Warning: The database defined as "test" will be erased and
